[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "all-night"
version = "0.1.0"
description = "A tiny, single-file Flask-like ASGI web framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "22552"}]
keywords = ["asgi", "web", "framework", "night"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: AsyncIO",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://github.com/22552/all-night"
Documentation = "https://github.com/22552/all-night/tree/main/docs"
Repository = "https://github.com/22552/all-night"

[project.scripts]
night = "night:cli"

[tool.setuptools]
py-modules = ["night"]

